[package]
name = "ruby-version-checker"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
regex = "1"
semver = { version = "1.0.22", features = ["std", "serde"] }
async-trait = "0.1.77"
serde_json = "1.0.113"

[dev-dependencies]
# reqwest doesn't like http 1.x yet
http = "< 1"
rand = "0.8.5"
