[package]
name = "ruby-version-checker"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
csv = "1.4"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
regex = "1"
semver = { version = "1.0.27", features = ["std", "serde"] }
async-trait = "0.1.89"
serde_json = "1.0.147"

[dev-dependencies]
# reqwest doesn't like http 1.x yet
http = "1"
rand = "0.9.2"
